main.tf
// vpc code 
resource "aws_vpc" "my-vpc" {
  cidr_block = "172.120.0.0/16"

  enable_dns_hostnames = true
  enable_dns_support   = true
  instance_tenancy     = "default"
  tags = {
    Name       = "utc-Vpc"
    env        = "Dev"
    app-name   = "utc"
    Team       = "wdp"
    created_by = "Didier"
  }
}
# Internet gateway

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.my-vpc.id
  tags = {
    Name = "utc-igw"
  }
}
# Public subnet creation 

resource "aws_subnet" "public1" {
  vpc_id                  = aws_vpc.my-vpc.id
  map_public_ip_on_launch = true
  cidr_block              = "172.120.1.0/24"
  availability_zone       = "us-east-1a"
  tags = {
    Name = "utc-public-sub1"
  }
}
resource "aws_subnet" "public2" {
  vpc_id                  = aws_vpc.my-vpc.id
  map_public_ip_on_launch = true
  cidr_block              = "172.120.2.0/24"
  availability_zone       = "us-east-1b"
  tags = {
    Name = "utc-public-sub2"
  }
}
// private subnets

resource "aws_subnet" "private1" {
  vpc_id            = aws_vpc.my-vpc.id
  availability_zone = "us-east-1a"
  cidr_block        = "172.120.3.0/24"
  tags = {
    Name = "utc-private-sub1"
  }
}
resource "aws_subnet" "private2" {
  vpc_id            = aws_vpc.my-vpc.id
  availability_zone = "us-east-1b"
  cidr_block        = "172.120.4.0/24"
  tags = {
    Name = "utc-private-sub2"
  }
}

# Nat gateway

resource "aws_eip" "eip1" {

}
resource "aws_nat_gateway" "Nat" {
  subnet_id     = aws_subnet.public1.id
  allocation_id = aws_eip.eip1.id
  tags = {
    Name = "utc-NAT"
  }
}

# Private route table

resource "aws_route_table" "rtprivate" {
  vpc_id = aws_vpc.my-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.Nat.id
  }
}

#public route table 

resource "aws_route_table" "rtpublic" {
  vpc_id = aws_vpc.my-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }
}

# public  route table association

resource "aws_route_table_association" "rta1" {
  subnet_id      = aws_subnet.public1.id
  route_table_id = aws_route_table.rtpublic.id
}
resource "aws_route_table_association" "rta2" {
  subnet_id      = aws_subnet.public2.id
  route_table_id = aws_route_table.rtpublic.id
}

# private route table association

resource "aws_route_table_association" "rta3" {
  subnet_id      = aws_subnet.private1.id
  route_table_id = aws_route_table.rtprivate.id
}

resource "aws_route_table_association" "rta4" {
  subnet_id      = aws_subnet.private2.id
  route_table_id = aws_route_table.rtprivate.id
}
